--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <!doc type>
 <html>
 <head>
-<i><marque direction="rght"><font size="7"><font color="yellow"><center><U> ENTER STUDENT IMFORMATION</U></center> </FONT COLOR></font size></marque></i>
+<i><marque direction="rght"><font size="7"><font color="yellow"><center><U> ENTER STUDENT DETAIL</U></center> </FONT COLOR></font size></marque></i>
         <style>
                 .button{
                         background-color: black;
